# scalable-agentic-rag-pipeline

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml  workflow.md
deploy/helm/neo4j/: values.yaml
deploy/helm/qdrant/: values.yaml
deploy/ingress/: nginx.yaml
deploy/ray/: autoscaling.yaml  ray-cluster.yaml  ray-serve-embed.yaml  ray-serve-llm.yaml
deploy/secrets/: external-secrets.yaml
eval/judges/: llm_judge.py
eval/ragas/: run.py
infra/karpenter/: provisioner-cpu.yaml  provisioner-gpu.yaml
infra/terraform/: eks.tf  iam.tf  main.tf  neo4j.tf  outputs.tf  rds.tf  redis.tf  s3.tf  variables.tf  vpc.tf
libs/observability/: metrics.py  tracing.py
libs/schemas/: chat.py
libs/utils/: backoff.py  document_parsing.py  ids.py  timing.py
models/embeddings/: bge-m3.yaml
models/llm/: llama-70b.yaml  llama-7b.yaml
models/rerankers/: bge-reranker.yaml
pipelines/ingestion/: config.yaml  main.py
pipelines/ingestion/chunking/: metadata.py  splitter.py
pipelines/ingestion/embedding/: compute.py
pipelines/ingestion/graph/: extractor.py  schema.py
pipelines/ingestion/indexing/: neo4j.py  qdrant.py
pipelines/ingestion/loaders/: docx.py  html.py  pdf.py
pipelines/jobs/: ray_job.yaml  s3_event_handler.py
scripts/: bulk_upload_s3.py  cleanup.sh  load_test.py  migrate_db.py  scrape_k8s_docs.py  warmup_cache.py
services/api/: main.py  requirements.txt
services/api/app/: config.py  logging.py
services/gateway/: rate_limit.lua
services/sandbox/: Dockerfile  limits.yaml  network-policy.yaml  runner.py
(+28 files in other folders)
