[project]
name = "scalable-agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.63",
    "tqdm>=4.67.3",
    "httpx>=0.28.1"
]

[dependency-groups]
api = [
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
    "uvicorn[standard]>=0.41.0",
]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]
ingestion = [
    "beautifulsoup4>=4.14.3",
    "boto3>=1.42.63",
    "httpx>=0.28.1",
    "langchain>=1.2.10",
    "langchain-text-splitters>=1.1.1",
    "neo4j>=6.1.0",
    "qdrant-client>=1.17.0",
    "sentence-transformers>=5.2.3",
    "unstructured[docx,pdf]>=0.21.5",
]
ray = [
    "ray[default]>=2.54.0",
]